--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+  /* background-color: #ffc107; */
+  
+  /* background: rgb(150,102,32);
+  background: linear-gradient(35deg, rgba(150,102,32,1) 0%, rgba(252,189,0,1) 48%, rgba(238,205,106,1) 100%); */
+
+  /* background: rgb(150,102,32);
+  background: linear-gradient(0deg, rgba(150,102,32,1) 0%, rgba(252,189,0,1) 48%, rgba(252,189,0,1) 100%); */
+
+  background-color: #FAD961;
+  background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
+
 }
 
 .App-logo {
