--- a/src/components/HeaderPage/HeaderPage.module.css
+++ b/src/components/HeaderPage/HeaderPage.module.css
@@ -1,6 +1,19 @@
+.iconcontainer{
+    background-color: aqua;
+}
+
 .logo{
-    margin-left: 10px;
+    margin-left: 15px;
+    margin-right: 200px;
     width: 80px;
+}
+
+
+.icon{
+    color: #000;
+    width: 40px;
+    height: 100%;
+    margin-right: 15px;
 }
 
 .bgheader{
