--- a/src/components/HeaderPage/HeaderPage.module.css
+++ b/src/components/HeaderPage/HeaderPage.module.css
@@ -1,21 +1,49 @@
-.iconcontainer{
-    background-color: aqua;
+header{
+    position: fixed !important;
+    max-height: 100%;
+    height: 80px;
+    width: 100%;
+    background-color: transparent;
+    z-index: 9999;
 }
 
-.logo{
-    margin-left: 15px;
-    margin-right: 200px;
-    width: 80px;
+nav{
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(25px);
 }
 
+nav .icons{
+    width: 15vh;
+    flex: initial;
+}
 
-.icon{
+img {
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    margin-top: -20px;
+    width: 60px;
+    height: 60px;
+}
+
+.userpic{
+    border-radius: 30px;
+    border: 5px solid transparent;
+    height: 60px;
+    background-size: unset;
+    background: linear-gradient(180deg, #FFC700 0%, #FF772B 100%);
+}
+
+.link{
     color: #000;
-    width: 40px;
-    height: 100%;
-    margin-right: 15px;
+    text-decoration: none;
+    flex: 1;
 }
 
-.bgheader{
-    background-color: #F2D019;
+.link:hover{
+    color: #000;
+    font-weight: bolder;
+    text-decoration: none;
 }
